--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2017
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Example great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,10 +18,11 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			Added some stuff
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git Training 2014</p>
 	</footer>
 </body>
 </html>
