mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <--!
-	Copyright 2017
+	Copyright 2017 adding before rebase confits
 -->
 <head>
 	<title>An Example very respectful Website</title>
