fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <--!
-	Copyright 2017 adding before rebase confits more stuff
-	some more changes
+	O WOW
 -->
 <head>
 	<title>An Example very respectful Website</title>
