mb adding conflicting changes

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <--!
-	Copyright 2017 adding before rebase confits
+	Copyright 2017 adding before rebase confits more stuff
+	some more changes
 -->
 <head>
 	<title>An Example very respectful Website</title>
