done with simple.html update

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	O WOW2
 -->
 <head>
-	<title>An Example very respectful Website</title>
+	<title>An Example very respectful Website Great stuff</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,6 +21,7 @@
 			Even more content
 			Just some content
 			Added some stuff
+			Here we go
 		</p>
 	</main>
 	<footer class="container">
