changes after stash branch

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	O WOW2
 -->
 <head>
-	<title>An Example very respectful Website Great stuff</title>
+	<title>An Example very update Website Great stuff</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
